Fixes gap at the top of the mobile nav
Former-commit-id: bff7ca5255a326eb68fb94aff5641ed40d6926db [formerly f5f6bf31ec2f2346ea45e31bdf710ba07e11ee8d]
Former-commit-id: 4a6c39d264f0c955dd42397b9fe5bbbf309bb373

--- a/themes/hugo-finn/static/css/style.css
+++ b/themes/hugo-finn/static/css/style.css
@@ -218,8 +218,8 @@ input[type=checkbox].toggle,
   width: 100vw;
   position: absolute;
   left: 0;
-  height: calc(100vh - 3.6rem - 4px);
-  top: calc(3.6rem + 4px);
+  height: calc(100vh - 3.6rem);
+  top: calc(3.6rem);
   transition: all 300ms;
   padding: 0.5rem;
   box-sizing: border-box;
